--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -27,6 +27,8 @@
 
 \lnTitlePage{19}{24}{4_SNhBeyato}
 
+\lnThought{A properly written program doesn't need comments, or maybe it does?}
+
 \lnQuote
   [Brian Kernighan]
   {brian-kernighan}
@@ -34,11 +36,11 @@
   {kernighan1974elements}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{bridge.png}
-\par\columnbreak\par
-``Comments which precede a group of statements, and which describe them in terms of operations in another domain, will be particularly helpful. The role of comments is to \ul{bridge} between knowledge domains.''
-\lnSource{brooks1978using}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{bridge.png}
+  \par\columnbreak\par
+  ``Comments which precede a group of statements, and which describe them in terms of operations in another domain, will be particularly helpful. The role of comments is to \ul{bridge} between knowledge domains.''
+  \lnSource{brooks1978using}
+  \end{multicols}}
 
 \lnQuote
   [Hubert E. Dunsmore]
@@ -47,20 +49,15 @@
   {woodfield1981effect}
 
 \lnQuote
-  {../05-maintainability-index/paper-1}
-  {[The degree of] \ul{intramodule commenting} is the number of lines with comments divided by the total number of lines in the module, averaged over all modules.}
-  {oman1992metrics}
-
-\lnQuote
   [David Parnas]
   {david-parnas}
   {Documentation that seems \ul{clear} and \ul{adequate} to its authors is often about \ul{as clear as mud} to the programmer who must maintain the code six months or \ul{six years later}.}
   {parnas1994software}
 
 \lnPitch{
-\pptBanner{Comments Affect Maintainability}
-\includegraphics[width=.75\linewidth]{maintainability.png}
-\lnSource{garcia1996maintainability}}
+  \pptBanner{Comments Affect Maintainability}
+  \includegraphics[width=.75\linewidth]{maintainability.png}
+  \lnSource{garcia1996maintainability}}
 
 \lnQuote
   [Martin Fowler]
@@ -99,48 +96,85 @@
   {martin2008clean}
 
 \lnQuote
+  [Tobias Röhm]
+  {tobias-roehm}
+  {Source code is \ul{more trusted} than documentation: 21 participants reported that they get their main information from \ul{source code} and \ul{inline comments} whereas only four stated that \ul{documentation} is their main source of information.}
+  {roehm2012professional}
+
+\lnThought{We can measure the amount of comments in a code base.}
+
+\lnQuote
+  {../05-maintainability-index/paper-1}
+  {[The degree of] \ul{intramodule commenting} is the number of lines with comments divided by the total number of lines in the module, averaged over all modules.}
+  {oman1992metrics}
+
+\lnQuote
   [Oliver Arafat]
   {oliver-arafat}
   {Comment density is the percentage of comment lines in a given source code base, that is, comment lines divided by total lines of code. Comment density is assumed to be a good \ul{predictor} of maintainability and hence \ul{survival} of a software project. In this study we focus on one particular code metric, the comment density, and assess it across 5,229 active open source projects, representing about 30\% of all active open source projects.}
   {arafat2009comment}
-
 \lnPitch{
-\pptBanner{Project Size vs. Comments Density}
-\includegraphics[width=.7\linewidth]{density.png}
-\lnSource{arafat2009comment}}
+  \pptBanner{Project Size vs. Comments Density}
+  \includegraphics[width=.7\linewidth]{density.png}
+  \lnSource{arafat2009comment}}
+
+\lnPitch{\pptBanner{Some Open Source Repositories (9 Feb 2024)}
+  {\ttfamily\small\begin{tabular}{llrrrr}
+  \toprule
+  Github Repository & Stack & Files & Comments & LoC & Com/LoC \\
+  \midrule
+  \href{https://github.com/nodejs/node}{nodejs} & JS \& C++ & 32559 & 1003K & 8381K & 0.12 \\
+  \href{https://github.com/pytorch/pytorch}{pytorch} & Python & 11562 & 414K & 2527K & 0.16 \\
+  \href{https://github.com/moby/moby}{moby} (a.k.a. Docker) & Go & 8389 & 272K & 1685K & 0.16 \\
+  \href{https://github.com/flutter/flutter}{flutter} & Dart & 5517 & 244K & 1353K & 0.18 \\
+  \href{https://github.com/spring-projects/spring-framework}{spring-framework} & Java & 9883 & 400K & 880K & 0.45 \\
+  \href{https://github.com/google/guava}{guava} & Java & 1984 & 131K & 479K & 0.27 \\
+  \href{https://github.com/curl/curl}{curl} & C & 2014 & 63K & 314K & 0.20 \\
+  \bottomrule
+  \end{tabular}}}
+
+\lnPitch{\pptBanner{My Own Statistics (9 Feb 2024)}
+  {\ttfamily\small\begin{tabular}{llrrr}
+  \toprule
+  Github Repository & Stack & Comments & LoC & Com/LoC \\
+  \midrule
+  \href{https://github.com/zerocracy/farm}{zerocracy/farm} & Java & 34380 & 58330 & 0.59 \\
+  \href{https://github.com/objectionary/eo}{objectionary/eo} & Java & 23383 & 49151 & 0.48 \\
+  \href{https://github.com/yegor256/cactoos}{yegor256/cactoos} & Java & 25857 & 33826 & 0.76 \\
+  \href{https://github.com/yegor256/takes}{yegor256/takes} & Java & 21393 & 26769 & 0.80 \\
+  \href{https://github.com/zold-io/zold}{zold-io/zold} & Ruby & 4306 & 11807 & 0.36 \\
+  \href{https://github.com/yegor256/tacit}{yegor256/tacit} & CSS & 259 & 1110 & 0.23 \\
+  \bottomrule
+  \end{tabular}}\par
+  All repositories are open source.}
+
+\lnThought{Not all comments are the same, some of them are helpful, while others aren't.}
 
 \lnQuote
   [Houari Sahraoui]
   {houari-sahraoui}
   {We defined a taxonomy of comments to guide this analysis. Our study showed that programmers comment \ul{some constructs} more often than others. In the majority of cases, comments are intended to \ul{explain} the code that follows them. The second more widely used category of comments are dedicated to \ul{communication} between programmers and personal notes (we call them \ul{working} comments).}
   {haouari2011good}
-
 \lnPitch{
-\pptBanner{Types of Comments}
-\includegraphics[width=.6\linewidth]{types-of-comments.png}
-\lnSource{haouari2011good}}
-
+  \pptBanner{Types of Comments}
+  \includegraphics[width=.6\linewidth]{types-of-comments.png}
+  \lnSource{haouari2011good}}
 \lnPitch{
-\pptBanner{Frequency of Comments}
-\includegraphics[width=.6\linewidth]{frequency-of-comments.png}
-\lnSource{haouari2011good}}
-
-\lnQuote
-  [Tobias Röhm]
-  {tobias-roehm}
-  {Source code is \ul{more trusted} than documentation: 21 participants reported that they get their main information from \ul{source code} and \ul{inline comments} whereas only four stated that \ul{documentation} is their main source of information.}
-  {roehm2012professional}
+  \pptBanner{Frequency of Comments}
+  \includegraphics[width=.6\linewidth]{frequency-of-comments.png}
+  \lnSource{haouari2011good}}
 
 \lnQuote
   [Luca Pascarella]
   {luca-pascarella}
   {Code comments contain valuable information to support software development, especially during code reading and code maintenance. Nevertheless, not all the comments are the \ul{same}.}
   {pascarella2019classifying}
-
 \lnPitch{
-\pptBanner{Taxonomy of Comment Types}
-\includegraphics[width=.95\linewidth]{taxonomy.png}
-\lnSource{pascarella2019classifying}}
+  \pptBanner{Taxonomy of Comment Types}
+  \includegraphics[width=.95\linewidth]{taxonomy.png}
+  \lnSource{pascarella2019classifying}}
+
+\lnThought{Comment density may differ in different programming languages.}
 
 \lnQuote
   [Hao He]
@@ -149,9 +183,11 @@
   {he2019understanding}
 
 \lnPitch{
-\pptBanner{Comments Density by Language}
-\includegraphics[width=.9\linewidth]{by-language.png}
-\lnSource{he2019understanding}}
+  \pptBanner{Comments Density by Language}
+  \includegraphics[width=.9\linewidth]{by-language.png}
+  \lnSource{he2019understanding}}
+
+\lnThought{Comments may be auto-generated by ML/LLM, but they are less helpful.}
 
 \lnQuote
   [Sean Stapleton]
@@ -165,52 +201,24 @@
   {Code comment generation is a popular area of research in recent years. In this work, we interviewed 16 professionals and surveyed 720 practitioners on commenting practices and issues they face and their expectations on code comment generation tools. Practitioners are \ul{enthusiastic} about research in \ul{comment generation} techniques and expect tools to generate comments for different granularity levels (especially \ul{class} and \ul{method} levels).}
   {hu2022practitioners}
 
+\lnThought{A few practical hints may help you write better comments.}
+
 \plush{\pptBanner{Nine Rules of Good Code Comments}
-\begin{multicols}{2}
-\scriptsize\begin{enumerate}\setlength\itemsep{-.1em}
-\item Comments should \ul{not duplicate} the code.
-\item Good comments do not excuse \ul{unclear} code.
-\item If you can't write a \ul{clear} comment, there may be a problem with the code.
-\item Comments should dispel \ul{confusion}, not cause it.
-\item Explain \ul{unidiomatic} code in comments.
-\item Provide links to the original source of \ul{copied} code.
-\item Include \ul{links} to external references where they will be most helpful.
-\item Add comments when \ul{fixing} bugs.
-\item Use comments to mark \ul{incomplete} implementations.
-\end{enumerate}
-\par\columnbreak\par
-\includegraphics[width=.9\linewidth]{joke.png}
-\lnSource{spertus2021}
-\end{multicols}}
-
-\lnPitch{\pptBanner{Some Open Source Repositories (9 Feb 2024)}
-{\ttfamily\small\begin{tabular}{llrrrr}
-\toprule
-Github Repository & Stack & Files & Comments & LoC & Com/LoC \\
-\midrule
-\href{https://github.com/nodejs/node}{nodejs} & JS \& C++ & 32559 & 1003K & 8381K & 0.12 \\
-\href{https://github.com/pytorch/pytorch}{pytorch} & Python & 11562 & 414K & 2527K & 0.16 \\
-\href{https://github.com/moby/moby}{moby} (a.k.a. Docker) & Go & 8389 & 272K & 1685K & 0.16 \\
-\href{https://github.com/flutter/flutter}{flutter} & Dart & 5517 & 244K & 1353K & 0.18 \\
-\href{https://github.com/spring-projects/spring-framework}{spring-framework} & Java & 9883 & 400K & 880K & 0.45 \\
-\href{https://github.com/google/guava}{guava} & Java & 1984 & 131K & 479K & 0.27 \\
-\href{https://github.com/curl/curl}{curl} & C & 2014 & 63K & 314K & 0.20 \\
-\bottomrule
-\end{tabular}}}
-
-\lnPitch{\pptBanner{My Own Statistics (9 Feb 2024)}
-{\ttfamily\small\begin{tabular}{llrrr}
-\toprule
-Github Repository & Stack & Comments & LoC & Com/LoC \\
-\midrule
-\href{https://github.com/zerocracy/farm}{zerocracy/farm} & Java & 34380 & 58330 & 0.59 \\
-\href{https://github.com/objectionary/eo}{objectionary/eo} & Java & 23383 & 49151 & 0.48 \\
-\href{https://github.com/yegor256/cactoos}{yegor256/cactoos} & Java & 25857 & 33826 & 0.76 \\
-\href{https://github.com/yegor256/takes}{yegor256/takes} & Java & 21393 & 26769 & 0.80 \\
-\href{https://github.com/zold-io/zold}{zold-io/zold} & Ruby & 4306 & 11807 & 0.36 \\
-\href{https://github.com/yegor256/tacit}{yegor256/tacit} & CSS & 259 & 1110 & 0.23 \\
-\bottomrule
-\end{tabular}}\par
-All repositories are open source.}
+  \begin{multicols}{2}
+  \scriptsize\begin{enumerate}\setlength\itemsep{-.1em}
+  \item Comments should \ul{not duplicate} the code.
+  \item Good comments do not excuse \ul{unclear} code.
+  \item If you can't write a \ul{clear} comment, there may be a problem with the code.
+  \item Comments should dispel \ul{confusion}, not cause it.
+  \item Explain \ul{unidiomatic} code in comments.
+  \item Provide links to the original source of \ul{copied} code.
+  \item Include \ul{links} to external references where they will be most helpful.
+  \item Add comments when \ul{fixing} bugs.
+  \item Use comments to mark \ul{incomplete} implementations.
+  \end{enumerate}
+  \par\columnbreak\par
+  \includegraphics[width=.9\linewidth]{joke.png}
+  \lnSource{spertus2021}
+  \end{multicols}}
 
 \end{document}
