--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -3,23 +3,27 @@
 
 \documentclass{article}
 \usepackage{../lecture-notes/notes}
+\usepackage[russian,english]{babel}
 \newcommand*\thetitle{Commits Density}
 \begin{document}
 
 \lnTitlePage{20}{24}{BrG3HiuYC5U}
 
+\lnThought{Just making changes is not enough, we should also explain them.}
+
 \lnQuote
   [Marc J. Rochkind]
   {marc-rochkind}
-  {Where the change was made, that is, to what source lines, and what the change actually was is recorded by the nature of the \ul{deltas} themselves. The \ul{reason} for the delta is not recorded automatically; it must be supplied by the programmer adding the delta, but it is required. The \ul{quality} of the reason (like the quality of the change itself) depends on the conscientiousness of the programmer.}
+  {Where the change was made, that is, to what source lines, and what the change actually was is recorded by the nature of the \ul{deltas} themselves. The \ul{reason} for the delta is not recorded automatically; it must be supplied by the programmer adding the delta, but it is required. The \ul{quality} of the reason (like the quality of the change itself) depends on the \textcolor{orange}{conscientiousness} ({\selectlanguage{russian}добросовестность}) of the programmer.}
   {rochkind1975source}
+
+\lnThought{The log of changes may help us understand the effort invested.}
 
 \lnQuote
   [Todd Graves]
   {todd-graves}
-  {By studying effort at the level of \ul{individual changes}, we are able to judge the influence of factors whose \ul{contributions} are not estimable at a large project level due to aggregation.}
+  {By studying effort at the level of individual changes, we are able to \ul{judge} the influence of factors whose contributions are \ul{not estimable} at a large project level due to aggregation.}
   {graves1998inferring}
-
 \lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{athcm.png}
@@ -31,7 +35,7 @@
 \lnQuote
   [David Atkins]
   {david-atkins}
-  {Observation is that the change history of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
+  {Observation is that the \ul{change history} of a software entity (i.e., the version control data about the modifications to the entity) can be used to estimate the amount of effort a developer expended on a particular modification or set of modifications.}
   {atkins1999using}
 
 \lnQuote
@@ -39,16 +43,25 @@
   {audris-mockus}
   {Our hypothesis is that a \ul{textual description} field of a change is essential to understanding why that change was performed. Also, we expect that difficulty, size, and interval would vary strongly across different types of changes.}
   {mockus2000identifying}
-
 \lnPitch{
   \includegraphics[width=.95\linewidth]{mr-classes.png}
   \lnSource{mockus2000identifying}}
+
+\lnThought{The log of changes may help us understand the effort invested.}
 
 \lnQuote
   [German Daniel]
   {german-daniel}
   {Developers take care to explain, in each \ul{Modification Request} (MR), the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
   {german2004using}
+
+\lnQuote
+  [Jeongju Sohn]
+  {jeongju-sohn}
+  {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
+  {sohn2017fluccs}
+
+\lnThought{MSR conference is dedicated to studying changes in software repositories.}
 
 \lnQuote
   [Ahmed E. Hassan]
@@ -75,12 +88,13 @@
     ``The automation permits the \ul{repetition} of studies on a large number of subject and the ability to verify the generality of many findings in these studies.''
   \end{itemize}}\end{pptWide}\lnSource{hassan2008road}}
 
+\lnThought{The history of changes may help find defective parts of a code base.}
+
 \lnQuote
   [Witold Pedrycz]
   {witold-pedrycz}
   {Results indicate that for the Eclipse data, \ul{process metrics} are more efficient defect predictors than code metrics... Files with high \ul{revision numbers} are by nature defect prone... Files that are part of \ul{large CVS commits} are likely to be defect free.}
   {moser2008comparative}
-
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{change-metrics.png}
   \par\columnbreak\par
@@ -93,11 +107,9 @@
   {abdulkareem-alali}
   {One observation is that the terms that suggest \ul{bug related changes} are associated with fairly small-sized commits.}
   {alali2008s}
-
 \lnPitch{
   \includegraphics[width=.95\linewidth]{size-distribution.png}
   \lnSource{alali2008s}}
-
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{terms.png}
   \par\columnbreak\par
@@ -110,7 +122,6 @@
   {abram-hindle}
   {Large commits were more likely to \ul{perfective} than \ul{corrective}, while small changes were more often corrective rather than perfective. In a way it makes sense, correcting errors is surgical, perfecting a system is much more global in scope.}
   {hindle2008large}
-
 \lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{type-of-change.png}
@@ -119,11 +130,21 @@
   \lnSource{hindle2008large}
   \end{multicols}}
 
+\lnThought{Some commits are good, while others are worse.}
+
 \lnQuote
   [Oliver Arafat]
   {oliver-arafat}
   {We suggest distinguishing commit types by their size, using the following simple heuristic: \ul{single} commits of 1 to 100 SLoC, \ul{aggregate} commits of 101 to 10000 SLoC, and repository \ul{refactorings} of more than 10000 SLoC.}
   {arafat2009commit}
+
+\lnQuote
+  [Jon Eyolfson]
+  {jon-eyolfson}
+  {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
+  {eyolfson2011time}
+
+\lnThought{Some commit messages are good, while others are worse.}
 
 \lnQuote
   [Marco D'Ambros]
@@ -136,12 +157,6 @@
   {raymond-buse}
   {We present an automatic technique for synthesizing succinct human-readable documentation for arbitrary program \ul{differences}. We compare our documentation to 250 human-written log messages from 5 popular open source projects. Employing a human study, we find that our generated documentation is \ul{suitable} for supplementing or replacing 89\% of existing log messages that directly describe a code change.}
   {buse2010automatically}
-
-\lnQuote
-  [Jon Eyolfson]
-  {jon-eyolfson}
-  {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
-  {eyolfson2011time}
 
 \lnQuote
   [Robert Dyer]
@@ -166,12 +181,6 @@
   {eddie-antonio-santos}
   {Despite some evidence to suggest that the ``unusualness'' of a commit message is positively correlated with build failure, the slope is so gradual that it is \ul{infeasible} for an average developer to \ul{judge} a commit by simply reading its log message.}
   {santos2016judging}
-
-\lnQuote
-  [Jeongju Sohn]
-  {jeongju-sohn}
-  {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
-  {sohn2017fluccs}
 
 \lnQuote
   [Iftekhar Ahmed]
@@ -200,6 +209,8 @@
   \lnSource{li2025optimization}
   \end{multicols}}
 
+\lnThought{Now, the best practices...}
+
 \plush{\pptBanner{Commits Best Practices (Coders' Folklore)}
   \begin{multicols}{2}{\small\begin{itemize}
   \item ``Commit it as soon as it compiles''
@@ -219,5 +230,10 @@
   \item ``The first line must be maximum 50 characters long, each line in the description should though wrap at the 72nd mark.''
     --- \href{https://preslav.me/2015/02/21/what-s-with-the-50-72-rule/}{here}
   \end{itemize}}\end{multicols}}
+
+\lnQuote
+  {kent-beck}
+  {I introduced `\textcolor{orange}{test \&\& commit}', where every time the tests run correctly the code is committed. The full command then is `test \&\& commit \textbar\textbar{} revert'. If the tests fail, then the code goes back to the state where the tests last passed.}
+  {beck2018tcr}
 
 \end{document}
