--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -236,4 +236,15 @@
   {I introduced `\textcolor{orange}{test \&\& commit}', where every time the tests run correctly the code is committed. The full command then is `test \&\& commit \textbar\textbar{} revert'. If the tests fail, then the code goes back to the state where the tests last passed.}
   {beck2018tcr}
 
+\lnPitch{
+  \pptBanner{I use Git pre-commit hook for all my repos}
+  \begin{multicols}{2}
+  \includegraphics[width=.95\linewidth]{pre-commit.png}\par
+  {\small This is how it works for multiple repositories at the same time:
+  \url{https://stackoverflow.com/a/79373503/187141}\par}
+  \par\columnbreak\par
+  ``Git hook scripts are useful for identifying simple issues before submission to code review. We run our \ul{hooks} on \ul{every commit} to automatically point out issues in code such as missing semicolons, trailing whitespace, and debug statements.''
+  \url{https://pre-commit.com}
+  \end{multicols}}
+
 \end{document}
