--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -47,20 +47,6 @@
   \includegraphics[width=.95\linewidth]{mr-classes.png}
   \lnSource{mockus2000identifying}}
 
-\lnThought{The log of changes may help us understand the effort invested.}
-
-\lnQuote
-  [German Daniel]
-  {german-daniel}
-  {Developers take care to explain, in each \ul{Modification Request} (MR), the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
-  {german2004using}
-
-\lnQuote
-  [Jeongju Sohn]
-  {jeongju-sohn}
-  {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
-  {sohn2017fluccs}
-
 \lnThought{MSR conference is dedicated to studying changes in software repositories.}
 
 \lnQuote
@@ -144,7 +130,19 @@
   {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
   {eyolfson2011time}
 
-\lnThought{Some commit messages are good, while others are worse.}
+\lnQuote
+  [Jeongju Sohn]
+  {jeongju-sohn}
+  {\ul{Age} simply measures how long a given program element has existed in the code base. We calculate the age of a given \ul{statement} as the number of consecutive versions from the faulty version backwards to the latest version containing a modication to the statement.}
+  {sohn2017fluccs}
+
+\lnThought{Some commit \ul{messages} are good, while others are worse.}
+
+\lnQuote
+  [German Daniel]
+  {german-daniel}
+  {Developers take care to explain, in each \ul{Modification Request} (MR), the \ul{reason} for the change (CVS allows developers to add a log message to every file revision during a CVS commit). The average log for an MR is 300 characters, with a minimum length of 1 (only 8 MRs) and 18~000 for the longest log (which involved the merging of a branch to the main CVS tree).}
+  {german2004using}
 
 \lnQuote
   [Marco D'Ambros]
