--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -100,7 +100,7 @@
 \lnQuote
   [Jon Eyolfson]
   {jon-eyolfson}
-  {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own latenight commits.}
+  {Commits submitted between midnight and 4~AM (referred to as late-night commits) are significantly buggier and commits between 7~AM and noon are less buggy, implying that developers may want to double-check their own \ul{latenight} commits.}
   {eyolfson2011time}
 
 \lnQuote
