--- a/20-commits-density/20-commits-density.tex
+++ b/20-commits-density/20-commits-density.tex
@@ -231,7 +231,7 @@
 
 \lnQuote
   {kent-beck}
-  {I introduced `\textcolor{orange}{test \&\& commit}', where every time the tests run correctly the code is committed. The full command then is `test \&\& commit \textbar\textbar{} revert'. If the tests fail, then the code goes back to the state where the tests last passed.}
+  {I introduced `test \&\& commit', where every time the tests run correctly the code is committed. The full command then is `\textcolor{orange}{test \&\& commit \textbar\textbar{} revert}'. If the tests fail, then the code goes back to the state where the tests last passed.}
   {beck2018tcr}
 
 \lnPitch{
