--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -18,6 +18,12 @@
   {brooks1978mythical}
 
 \lnQuote
+  [Richard G. Hamlet]
+  {richard-hamlet}
+  {It is a truism that \ul{good} software is easy to \ul{maintain}.}
+  {hamlet1997}
+
+\lnQuote
   [Ward Cunningham]
   {ward-cunningham}
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}
