--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -169,10 +169,16 @@ assert foo(50) == 42;
   {kaner2002lessons}
 
 \lnQuote
-  [Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan]
+  [Pavneet Singh Kochhar]
   {pavneet-singh-kochhar}
   {Our results show that coverage has an \ul{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \ul{no such correlation} at the file level.}
   {kochhar2017}
+
+\lnQuote
+  [Vladimir Khorikov]
+  {vladimir-khorikov}
+  {Coverage metrics are a good negative indicator, but a bad positive one.}
+  {khorikov2019unit}
 
 \lnQuote
   [Goran Petrovi{\'c}]
